infra/k8s/progressive-delivery/ingress-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: itunda-public
  namespace: itunda
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.itunda.internal
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-gateway
  namespace: itunda
spec:
  hosts:
  - api.itunda.internal
  gateways:
  - itunda-public
  http:
  - name: primary
    route:
    - destination:
        host: api-gateway-stable.itunda.svc.cluster.local
        port:
          number: 3000
      weight: 100
    - destination:
        host: api-gateway-canary.itunda.svc.cluster.local
        port:
          number: 3000
      weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: itunda
spec:
  hosts:
  - backend.itunda.svc.cluster.local
  gateways:
  - mesh
  http:
  - name: primary
    route:
    - destination:
        host: backend-stable.itunda.svc.cluster.local
        port:
          number: 4001
      weight: 100
    - destination:
        host: backend-canary.itunda.svc.cluster.local
        port:
          number: 4001
      weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ledger-service
  namespace: itunda
spec:
  hosts:
  - ledger-service.itunda.svc.cluster.local
  gateways:
  - mesh
  http:
  - name: primary
    route:
    - destination:
        host: ledger-service-stable.itunda.svc.cluster.local
        port:
          number: 8082
      weight: 100
    - destination:
        host: ledger-service-canary.itunda.svc.cluster.local
        port:
          number: 8082
      weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: payment-service
  namespace: itunda
spec:
  hosts:
  - payment-service.itunda.svc.cluster.local
  gateways:
  - mesh
  http:
  - name: primary
    route:
    - destination:
        host: payment-service-stable.itunda.svc.cluster.local
        port:
          number: 8081
      weight: 100
    - destination:
        host: payment-service-canary.itunda.svc.cluster.local
        port:
          number: 8081
      weight: 0
